--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Tik Tak Toe</h1>
     <div id="canvas"></div>
+    <div id="result"></div>
 
     <script src="script.js"></script>
 </body>
