--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tik-Tak-Toe</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Tik Tak Toe</h1>
-    <div id="canvas"></div>
-    <div id="result"></div>
+    
+    <div class="container">
+        <h1>Tik Tak Toe</h1>
+        <div id="canvas"></div>
+        <div id="result"></div>
+    </div>
 
     <script src="script.js"></script>
 </body>
